// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots crd/CustomResourceDetails Error Getting CR 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
    >
      Error getting custom resource nonexistentcustomresource: No mock custom resource for you
    </p>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails Error Getting CRD 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
    >
      Error getting custom resource definition error.crd.io: No mock CRD for you
    </p>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails Loading CRD 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
      title="Loading custom resource details"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails No Error 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          href="/"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <svg
                aria-hidden="true"
                class="iconify iconify--mdi"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <path
                  d="M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6l1.41-1.42Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h1
                class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
              >
                MyCustomResource
              </h1>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Edit"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    title="Edit"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="iconify iconify--mdi"
                        height="1em"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83l3.75 3.75M3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Delete"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    title="Delete"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="false"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Name
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        mycustomresource
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Namespace
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        mynamespace
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Creation
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        12/15/2021, 2:57:13 PM UTC
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Test Col
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                        title="My description"
                      >
                        mycustomresource
                        <svg
                          aria-hidden="true"
                          class="makeStyles-icon iconify iconify--mdi"
                          height="1rem"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <path
                            d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6Z"
                            fill="currentColor"
                          />
                        </svg>
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;
